--- a/css/styles.css
+++ b/css/styles.css
@@ -128,14 +128,14 @@ color: #434455;
 
 .hero-container{
   align-items: center;
-  padding-top: 99px;
-  padding-bottom: 266px;
+  padding-top: 188px;
+  padding-bottom: 188px;
   padding-right: 322px;
   padding-left: 322px;
 }
 
 .main-title {
-max-width: 508px;
+max-width: 496px;
 font-weight: 700;
 font-size: 56px;
 line-height: 1.07;
@@ -144,13 +144,6 @@ text-align: center;
 color: #ffffff;
 margin-bottom: 48px;
 }
-
-.hero-container-button{
-display: flex;
-flex-direction: column;
-align-items: center;
-}
-
 .order-btn {
 border-radius: 4px;
 padding: 16px 32px;
@@ -162,7 +155,14 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: #ffffff;
 }
-
+.button-container{
+  display: block;
+  align-items: center;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  margin: auto;
+  }
 .order-btn:hover,
 .order-btn:focus {
   background: #404bbf;
@@ -180,10 +180,12 @@ color: #ffffff;
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
+.service-block-items {
+width: calc((100% - 72px) / 4);
+}
 .service-block{
   display: flex;
-  column-gap: 24px;
+  gap: 24px;
 }
 
 .service-block-title {
@@ -222,11 +224,11 @@ color: #ffffff;
 }
 .team-section-list{
   display: flex;
-  column-gap: 24px;
+  gap: 24px;
 }
 .team-section-item{
 width:calc((100% - 72px) / 4)
-border-radius: 0 0 4px 4px;
+border-radius: 0px 0px 4px 4px;
 padding: 0px 0px 32px 0px;
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 background: #fff;
@@ -245,6 +247,9 @@ margin-bottom: 8px;
 margin-left: 16px;
 margin-right: 16px;
 }
+.team-description{
+  padding: 32px 0px;
+}
 
 .team-item-paragraph{
 font-weight: 400;
@@ -260,13 +265,11 @@ margin-top: 8px;
   height: auto;
 } 
 /* -------------- Our Portfolio ---------- */
-.team-section-titile{
-  margin-bottom: 72px;
-}
 .portfolio-list{
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
+  row-gap: 48px;
   justify-content: flex-start;
 }
 .portfolio-title {
@@ -277,23 +280,23 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
-padding-bottom: 72px;
+margin-bottom: 72px;
 }
 .portfolio-list-item{
 width: calc((100% - 48px) / 3);
 margin-bottom: 48px;
 }
-.portfolio-list-paragraph{
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  }
+
+.porfolio-block{
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .portfolio-list-title {
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
   padding-top: 32px;
   padding-left: 16px;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -319,6 +322,7 @@ margin-bottom: 48px;
 /*---------Footer-------*/
 .page-footer {
   background: #2e2f42;
+  padding: 100px 0px;
 }
 .container-footer{
 display: flex;
@@ -326,9 +330,10 @@ flex-direction: column;
 align-items:flex-start;
 
 }
-.page-footer-logo{
-padding-top: 100px;
+.page-footer-logo {
+display:inline-block;
 padding-left: 156px;
+margin-bottom: 16px;
 font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
@@ -349,5 +354,4 @@ letter-spacing: 0.02em;
 color: #f4f4fd;
 padding-left: 156px;
 padding-top: 16px;
-padding-bottom: 100px;
 }
