--- a/css/styles.css
+++ b/css/styles.css
@@ -124,12 +124,11 @@ color: #434455;
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+  padding: 188px 0px;
 }
 
 .hero-container{
   align-items: center;
-  padding-top: 188px;
-  padding-bottom: 188px;
   padding-right: 322px;
   padding-left: 322px;
 }
@@ -285,6 +284,7 @@ margin-bottom: 72px;
 .portfolio-list-item{
 width: calc((100% - 48px) / 3);
 margin-bottom: 48px;
+border-radius: 0px 0px 4px;
 }
 
 .porfolio-block{
