--- a/css/styles.css
+++ b/css/styles.css
@@ -128,9 +128,6 @@ color: #434455;
 }
 
 .hero-container{
-  align-items: center;
-  padding-right: 322px;
-  padding-left: 322px;
 }
 
 .main-title {
@@ -141,6 +138,7 @@ line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #ffffff;
+margin: 0 auto;
 margin-bottom: 48px;
 }
 .order-btn {
@@ -227,7 +225,6 @@ width: calc((100% - 72px) / 4);
 }
 .team-section-item {
 width:calc((100% - 72px) / 4);
-padding: 0px 0px 32px 0px;
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 background: #ffffff;
 border-radius: 0px 0px 4px 4px;
@@ -242,10 +239,7 @@ text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
 background-color: #ffffff;
-margin-top: 32px;
 margin-bottom: 8px;
-margin-left: 16px;
-margin-right: 16px;
 }
 .team-description{
   padding: 32px 0px;
@@ -257,7 +251,6 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
-margin-top: 8px;
 }
 .team-image{
   display: block;
@@ -284,7 +277,6 @@ margin-bottom: 72px;
 }
 .portfolio-list-item{
 width: calc((100% - 48px) / 3);
-margin-bottom: 48px;
 border-radius: 0px 0px 4px 4px;
 }
 
@@ -295,8 +287,6 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-list-title {
-  padding-top: 32px;
-  padding-left: 16px;
   margin-bottom: 8px;
   font-weight: 500;
   font-size: 20px;
@@ -307,8 +297,6 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-list-paragraph {
-  padding-left: 16px;
-  padding-bottom: 32px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -333,7 +321,6 @@ align-items:flex-start;
 }
 .page-footer-logo {
 display:inline-block;
-padding-left: 156px;
 margin-bottom: 16px;
 font-family: "Raleway", sans-serif;
 font-weight: 700;
@@ -348,11 +335,9 @@ color: #f4f4fd;
 }
 
 .page-footer-paragraph{
-max-width: 480px;
+max-width: 264px;
 font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
-padding-left: 156px;
-padding-top: 16px;
 }
